<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".MainActivity$PlaceholderFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/imgLogo"
        android:src="@drawable/voiq_logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/layMail"
        android:background="@drawable/border_login_field"
        android:layout_below="@id/imgLogo">

        <ImageView
            android:layout_width="20dp"
            android:layout_centerVertical="true"
            android:id="@+id/imgMail"
            android:src="@android:drawable/sym_action_email"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/imgMail"
            android:background="#FFF"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_marginBottom="10dp"
            android:id="@+id/txtMail"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/layPass"
        android:background="@drawable/border_login_field"
        android:layout_below="@id/layMail">

        <ImageView
            android:layout_width="20dp"
            android:layout_centerVertical="true"
            android:id="@+id/imgPass"
            android:src="@android:drawable/ic_secure"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginLeft="10dp"
            android:imeOptions="actionDone"
            android:layout_width="fill_parent"
            android:layout_toRightOf="@id/imgPass"
            android:background="#FFF"
            android:inputType="textPassword"
            android:hint="@string/pass_hint"
            android:layout_marginBottom="10dp"
            android:id="@+id/txtPass"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:text="@string/login_button"
        android:textStyle="bold"
        android:background="@color/ForestGreen"
        android:layout_centerHorizontal="true"
        android:textColor="#FFF"
        android:layout_below="@id/layPass"
        android:id="@+id/btnLogin"
        android:layout_marginTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="20dp"
        android:id="@+id/lblForgot"
        android:text="@string/forgot_password"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lblForgot"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#888"
            android:text="@string/not_agent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/lblApply"
            android:layout_marginLeft="5dp"
            android:text="@string/apply_here"
            android:textColor="#CC8000"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
